--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = py37,py39,lint
+envlist = py39,lint
 
 [testenv]
 basepython =
     {lint}: {env:TOXPYTHON:python3}
-    py37: {env:TOXPYTHON:python3.7}
     py39: {env:TOXPYTHON:python3.9}
 passenv = *
 install_command = pip install {opts} {packages}
